--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO List</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
     <div class="body_container">
-        <div>
+        <header>
+            TO-DO list
+        </header>
+        <div class="todo_container">
             <div class="todo_input">
-                <input type="text" name="todo" id="todo">
-                <button class="add-btn" onclick="add()"><i class="fa-solid fa-plus"></i> Add</button>
+                <input type="text" name="todo" id="todo" placeholder="Enter your task here ...">
+                <button id="add_btn" onclick="add()"><i class="fa-solid fa-plus"></i> Add</button>
             </div>
             <div class="todo_list_container">
                 <ul id="todo_list">
-                
                 </ul>
             </div>
         </div>
+        <footer>
+            Design by Mohtashim Javed
+        </footer>
     </div>
     <script src="app.js"></script>
     <script src="https://kit.fontawesome.com/a7577e03bc.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
