--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 
 <body>
     <div class="body_container">
-        <header>
-            TO-DO list
-        </header>
-        <div class="todo_container">
-            <div class="todo_input">
-                <input type="text" name="todo" id="todo" placeholder="Enter your task here ...">
+        <div id="todo_container">
+            <div class="todo_input animate__animated animate__fadeInDown">
+                <p>TO-DO list</p> 
+                <input type="text" name="todo" id="todo" placeholder="Enter your task here ..." maxlength="30">
                 <button id="add_btn" onclick="add()"><i class="fa-solid fa-plus"></i> Add</button>
+                <header class="animate__animated animate__zoomIn">
+                TODO List using HTML, CSS & Javascript.
+                </header>
             </div>
             <div class="todo_list_container">
                 <ul id="todo_list">
                 </ul>
             </div>
         </div>
-        <footer>
+        <!-- <footer>
             Design by Mohtashim Javed
-        </footer>
+        </footer> -->
     </div>
     <script src="app.js"></script>
     <script src="https://kit.fontawesome.com/a7577e03bc.js" crossorigin="anonymous"></script>
